syntax = "proto3";
package sojahub.sojahub.rbank;

import "gogoproto/gogo.proto";
import "rbank/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/sojahub/sojahub/x/rbank/types";

// GenesisState defines the rbank module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated AddressPrefix addressPrefix = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}

message AddressPrefix {
  string denom = 1;
  string accAddressPrefix = 2;
  string valAddressPrefix = 3;
}